2002-12-11  Richard Williamson   <rjw@apple.com>

        Fixed 3125425.  Just call super if view isn't in view heirarchy,
        rather than asserting.  The assert was firing because NSText 
        was trying to perform a background layout on an item view that
        was moved to the page cache.
        
        Reviewed by gramps.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer incrementalLoadWithBytes:length:complete:]):
        (-[WebImageRenderer drawClippedToValidInRect:fromRect:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView visibleRect]):

2002-12-11  Richard Williamson   <rjw@apple.com>

        Fixed 3124121, 3124716 (and other dupes).  Regressions related to b/f crash.
        
        Reviewed by hyatt.

        * ChangeLog:
        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem _scheduleRelease]):
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge saveDocumentToPageCache:]):
        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer incrementalLoadWithBytes:length:complete:]):
        (-[WebImageRenderer drawClippedToValidInRect:fromRect:]):
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _setState:]):

2002-12-11  Richard Williamson   <rjw@apple.com>

        Fixed 3123375.  Provide SPI to release all pending page caches
        
        Reviewed by kocienda.

        * History.subproj/WebBackForwardList.m:
        * History.subproj/WebHistoryItem.h:
        * History.subproj/WebHistoryItem.m:
        * History.subproj/WebHistoryItemPrivate.h: Added.
        * WebCoreSupport.subproj/WebBridge.m:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebFramePrivate.m:

2002-12-11  Darin Adler  <darin@apple.com>

        Reviewed by Richard.

	- fixed 3124837 -- Crash trying to handle weird javascript URL in page address field

        * Plugins.subproj/WebBaseNetscapePluginView.m: